<resources>
    <string name="app_name">MotionLight</string>
    <string name="action_settings">Settings</string>
    <string name="voice_command_button_text">  让他/她知道...  </string>
    <string name="switch_command_button_text">让周围的人知道...</string>
    <string name="text_red">红</string>
    <string name="text_green">绿</string>
    <string name="text_blue">蓝</string>
    <string name="text_close">关闭</string>
    <string name="text_pair_device">配对账号</string>
    <string name="text_pair_request">请求账号</string>
    <string name="text_accept">同意</string>
    <string name="text_refuse">拒绝</string>
    <string name="text_apply">确定</string>
    <string name="text_cancel">取消</string>
    <string name="text_warning_no_pair">还未进行配对，是否开始配对?</string>
</resources>
