<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingLeft="80dp"
    android:paddingRight="80dp"
    android:paddingTop="8dp">

    <Button
        android:id="@+id/redLightBtn"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onSelectedRed"
        android:text="@string/text_red" />

    <Button
        android:id="@+id/greenLightBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onSelectedGreen"
        android:text="@string/text_green" />

    <Button
        android:id="@+id/blueLightBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onSelectedBlue"
        android:text="@string/text_blue" />

    <Button
        android:id="@+id/closeLightBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onSelectedClose"
        android:text="@string/text_close" />

</LinearLayout>